--- a/index.html
+++ b/index.html
@@ -15,28 +15,25 @@
   </head>
 
   <body>
-    <div>
-      <img src="https://cloud.githubusercontent.com/assets/712091/2749825/779ed37c-c828-11e3-9371-2f8640b66d82.png"/>
-    </div>
     <div id="container">
       <div class="inner">
 
         <header>
           <h1>Word Cam</h1>
-          <h2>Quick one word dictionary lookups from camera pictures</h1>
+          <h2>Quick one word English dictionary lookups from camera pictures</h1>
           
         </header>
 
         <hr>
           <div>
-            <a href=" https://itunes.apple.com/us/app/id851337369?mt=8"><img src="https://cloud.githubusercontent.com/assets/6765515/2623273/6cf27af4-bce4-11e3-8e5f-4e5def3a17fa.png"></a>
+            <a href="https://itunes.apple.com/us/app/word-cam/id1035204545?mt=8"><img src="https://cloud.githubusercontent.com/assets/6765515/2623273/6cf27af4-bce4-11e3-8e5f-4e5def3a17fa.png"></a>
           </div>
         
         <section id="main_content">
           <h3>
 <a name="wc-why" class="anchor" href="#why"><span class="octicon octicon-link"></span></a>Why one word lookups?</h3>
 
-<p>Word Cam enables you to quickly lookup word definitions when reading a paperback book or other non-digital reading material without having to type in the word. Word Cam seamlessly combines enhanced black-and-white images with text extraction (image OCR) and a dictionary lookup.
+<p>Word Cam enables you to quickly lookup English word definitions when reading a paperback book or other non-digital reading material without having to type in the word. Word Cam seamlessly combines enhanced black-and-white images with text extraction (image OCR) and a dictionary lookup.
 <p>
         </section>
 
